[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Scores.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_right = 1.05945
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 397.947
margin_top = 429.909
margin_right = 599.947
margin_bottom = 493.909
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonalScores" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 93.0
margin_right = 229.0
margin_bottom = 291.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" type="RichTextLabel" parent="."]
margin_left = 724.262
margin_top = 108.892
margin_right = 857.262
margin_bottom = 306.892
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 94.2922
margin_top = 64.6272
margin_right = 217.292
margin_bottom = 85.6272
custom_fonts/font = SubResource( 1 )
text = "Personal Scores"

[node name="Label2" type="Label" parent="."]
margin_left = 720.435
margin_top = 74.1624
margin_right = 843.435
margin_bottom = 95.1624
custom_fonts/font = SubResource( 1 )
text = "Total High scores"
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
